# befunge-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/befunge/: befunge.hpp
src/: befunge.cpp
test/: CMakeLists.txt  sample_test.cpp
test/sample/: 01_o.txt  02.befunge  02_o.txt  03.befunge  03_o.txt  chomper.rb  output_generator.sh
